fix table border not showing

--- a/css/custom.css
+++ b/css/custom.css
@@ -114,7 +114,7 @@ SQL-slide custom styles
   max-height: 400px;
   margin: 0 auto;
   overflow: auto;
-  padding: 0;
+  padding: 1px;
   margin: 0 5%;
   display: flex;
   justify-content: center;
